# async-transport

./: Cargo.toml  LICENSE  README.md  codecov.yml
.github/workflows/: cargo.yml  grcov.yml
examples/: simple.rs
src/: fallback.rs  lib.rs  proto.rs  unix.rs  windows.rs
src/runtime/: async_std.rs  metal_io.rs  mod.rs  smol.rs  tokio.rs
tests/: async_io_test.rs  metal_io_test.rs  simple.rs
