[package]
name = "async-transport"
version = "0.3.2"
authors = ["Rusty Rain <y@liu.mx>"]
edition = "2021"
description = "Asynchronous transports with ECN information"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/async-transport"
repository = "https://github.com/retty-io/async-transport"
homepage = "https://retty.io"
keywords = ["networking", "protocols"]
categories = [ "network-programming", "asynchronous" ]

[features]
default = ["runtime-tokio"] #["runtime-async-std"] #
runtime-tokio = ["tokio/net"]
runtime-async-std = ["async-io", "async-std"]

[dependencies]
libc = "0.2.92"
socket2 = "0.4.0"
tracing = "0.1.37"
async-io = { version = "1.12.0", optional = true }
async-std = { version = "1.12.0", optional = true }
tokio = { version = "1.25.0", features = ["net"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.45.0", features = ["Win32_Networking_WinSock"] }

[dev-dependencies]
tokio = { version = "1.25.0", features = ["full"] }
anyhow = "1.0.40"
env_logger = "0.8.3"
log = "0.4.14"
