[package]
name = "async-transport"
version = "0.4.1"
authors = ["Rusty Rain <y@liu.mx>"]
edition = "2021"
description = "Asynchronous transports with ECN information"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/async-transport"
repository = "https://github.com/retty-io/async-transport"
homepage = "https://retty.io"
keywords = ["networking", "protocols"]
categories = [ "network-programming", "asynchronous" ]

[features]
default = ["metal-io"]
metal-io = ["retty-io"]
runtime-tokio = ["tokio/net"]
runtime-async-std = ["async-io", "async-std"]

[dependencies]
libc = "0.2.139"
socket2 = "0.4.9"
tracing = "0.1.37"
retty-io = { version = "0.3.0", optional = true }
tokio = { version = "1.26.0", optional = true }
async-io = { version = "1.12.0", optional = true }
async-std = { version = "1.12.0", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.45.0", features = ["Win32_Networking_WinSock"] }

[dev-dependencies]
tokio = { version = "1.26.0", features = ["full"] }
anyhow = "1.0.69"
env_logger = "0.10.0"
log = "0.4.17"
