[package]
name = "async-transport"
version = "0.5.0"
authors = ["Rusty Rain <y@liu.mx>"]
edition = "2021"
description = "Asynchronous transports with ECN information"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/async-transport"
repository = "https://github.com/retty-io/async-transport"
homepage = "https://retty.io"
keywords = ["networking", "protocols"]
categories = [ "network-programming", "asynchronous" ]

[features]
default = ["runtime-smol"]
runtime-tokio = ["tokio/net"]
runtime-async-std = ["async-io", "async-std"]
runtime-smol = ["async-io", "smol"]

[dependencies]
libc = "0.2.153"
socket2 = "0.5.6"
tracing = "0.1.40"
tokio = { version = "1.36.0", optional = true }
async-io = { version = "2.3.1", optional = true }
async-std = { version = "1.12.0", optional = true }
smol = { version = "2.0.0", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_Networking_WinSock"] }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.80"
env_logger = "0.11.3"
log = "0.4.21"
